experimental/ir/testdata/options/values/bool.proto.stderr.txt
error: nested array expressions are not allowed
  --> testdata/options/values/bool.proto:40:31
   |
40 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |        ---------------------------------- ...within this array expression
   |                               ^^ cannot nest this array expression...

error: unexpected range expression in option setting value
  --> testdata/options/values/bool.proto:40:35
   |
40 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |                                   ^^^^^^

warning: non-canonical `bool` literal
  --> testdata/options/values/bool.proto:25:8
   |
25 |     x: True
   |        ^^^^
  help: replace with `true`
   |
25 | -     x: True
25 | +     x: true
   |
   = note: within message expressions only, `True` is permitted as a `bool`, but
           should be avoided

warning: non-canonical `bool` literal
  --> testdata/options/values/bool.proto:26:8
   |
26 |     x: False
   |        ^^^^^
  help: replace with `false`
   |
26 | -     x: False
26 | +     x: false
   |
   = note: within message expressions only, `False` is permitted as a `bool`,
           but should be avoided

warning: non-canonical `bool` literal
  --> testdata/options/values/bool.proto:27:8
   |
27 |     x: t
   |        ^
  help: replace with `true`
   |
27 | -     x: t
27 | +     x: true
   |
   = note: within message expressions only, `t` is permitted as a `bool`, but
           should be avoided

warning: non-canonical `bool` literal
  --> testdata/options/values/bool.proto:28:8
   |
28 |     x: f
   |        ^
  help: replace with `false`
   |
28 | -     x: f
28 | +     x: false
   |
   = note: within message expressions only, `f` is permitted as a `bool`, but
           should be avoided

error: cannot find `TRUE` in this scope
  --> testdata/options/values/bool.proto:31:8
   |
31 |     x: TRUE
   |        ^^^^ not found in this scope
   |
   = help: the full name of this scope is `buf.test`

error: cannot find `FALSE` in this scope
  --> testdata/options/values/bool.proto:32:8
   |
32 |     x: FALSE
   |        ^^^^^ not found in this scope
   |
   = help: the full name of this scope is `buf.test`

error: cannot find `T` in this scope
  --> testdata/options/values/bool.proto:33:8
   |
33 |     x: T
   |        ^ not found in this scope
   |
   = help: the full name of this scope is `buf.test`

error: cannot find `F` in this scope
  --> testdata/options/values/bool.proto:34:8
   |
34 |     x: F
   |        ^ not found in this scope
   |
   = help: the full name of this scope is `buf.test`

error: mismatched types
  --> testdata/options/values/bool.proto:36:9
   |
36 |     x: -true
   |        -^^^^ expected number, found `bool`
   |        |
   |        expected due to this
   |
   = note: expected: number
              found: scalar type `bool`

error: mismatched types
  --> testdata/options/values/bool.proto:37:9
   |
37 |     x: -True
   |        -^^^^ expected number, found `bool`
   |        |
   |        expected due to this
   |
   = note: expected: number
              found: scalar type `bool`

warning: non-canonical `bool` literal
  --> testdata/options/values/bool.proto:37:9
   |
37 |     x: -True
   |         ^^^^
  help: replace with `true`
   |
37 | -     x: -True
37 | +     x: -true
   |
   = note: within message expressions only, `True` is permitted as a `bool`, but
           should be avoided

error: mismatched types
  --> testdata/options/values/bool.proto:40:9
   |
40 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |         ^ expected `bool`, found integer literal
...
52 |     repeated bool x = 1;
   |     ------------- expected due to this
   |
   = note: expected: scalar type `bool`
              found: integer literal

error: mismatched types
  --> testdata/options/values/bool.proto:40:12
   |
40 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |            ^^^ expected `bool`, found floating-point literal
...
52 |     repeated bool x = 1;
   |     ------------- expected due to this
   |
   = note: expected: scalar type `bool`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/bool.proto:40:17
   |
40 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |                 ^^^ expected `bool`, found floating-point literal
...
52 |     repeated bool x = 1;
   |     ------------- expected due to this
   |
   = note: expected: scalar type `bool`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/bool.proto:40:22
   |
40 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |                      ^^^ expected `bool`, found floating-point literal
...
52 |     repeated bool x = 1;
   |     ------------- expected due to this
   |
   = note: expected: scalar type `bool`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/bool.proto:40:27
   |
40 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |                           ^^ expected `bool`, found message expression
...
52 |     repeated bool x = 1;
   |     ------------- expected due to this
   |
   = note: expected: scalar type `bool`
              found: message expression

error: non-canonical `bool` literal outside of message expression
  --> testdata/options/values/bool.proto:46:14
   |
46 | option (y) = True;
   |              ^^^^
  help: replace with `true`
   |
46 | - option (y) = True;
46 | + option (y) = true;
   |
   = note: within message expressions only, `True` is permitted as a `bool`, but
           should be avoided

error: non-canonical `bool` literal outside of message expression
  --> testdata/options/values/bool.proto:47:14
   |
47 | option (y) = False;
   |              ^^^^^
  help: replace with `false`
   |
47 | - option (y) = False;
47 | + option (y) = false;
   |
   = note: within message expressions only, `False` is permitted as a `bool`,
           but should be avoided

error: non-canonical `bool` literal outside of message expression
  --> testdata/options/values/bool.proto:48:14
   |
48 | option (y) = t;
   |              ^
  help: replace with `true`
   |
48 | - option (y) = t;
48 | + option (y) = true;
   |
   = note: within message expressions only, `t` is permitted as a `bool`, but
           should be avoided

error: non-canonical `bool` literal outside of message expression
  --> testdata/options/values/bool.proto:49:14
   |
49 | option (y) = f;
   |              ^
  help: replace with `false`
   |
49 | - option (y) = f;
49 | + option (y) = false;
   |
   = note: within message expressions only, `f` is permitted as a `bool`, but
           should be avoided

encountered 17 errors and 5 warnings
